test/pass/variant.sest
module Variant :> sig

  type foo<$a> =
    | Foo(int)
    | Bar($a)

end = struct

  type foo<$a> =
    | Foo(int)
    | Bar($a)

end
