test/fail/error_variant.sest
module ErrorVariant :> sig
  type t =
    | Foo(int)
end = struct
  type t =
    | Foo(int)
    | Bar
end
